# demeter-paper-simulations

./: README.md  distance_data.csv  distance_data.xlsx  launch_sequence.py  plot_gannt_chart.py  rosgraph.dot  rosgraph_nodestopics_active.dot  rosgraph_nodestopics_all.dot  run_several_times.sh  turbine_coordinates_in_xml.txt
src/auv_autonomy/: CMakeLists.txt  auv_rviz.rviz  package.xml
src/auv_autonomy/launch/: aruco.launch  auv_keyboard_teleop.launch  mapping.launch  position_demo.launch  teleop_demo.launch  waypoints.launch
src/auv_autonomy/launch/param/: waypoints_cable_params.yaml  waypoints_params.yaml
src/auv_autonomy/src/: waypoints.cpp
src/auv_control/: CMakeLists.txt  package.xml
src/auv_control/config/: TAM_bck.yaml  inertial.yaml  thruster_manager.yaml
src/auv_control/launch/: auv_thruster_manager.launch  position_hold.launch
src/auv_control/rviz/: auv_control.rviz  auv_control_demo.rviz
src/demeter_planning/: .gitignore  CMakeLists.txt  package.xml
src/demeter_planning/common/: domain.pddl  domain_multi.pddl  domain_with_localization.pddl  plan.pddl  problem.pddl  problem_old.pddl
src/demeter_planning/common_old/: domain.pddl  problem.pddl
src/demeter_planning/launch/: allocation.launch  distance_tracker.launch  goal_allocation.launch  gui_planning.launch  monitor_sim_time.launch  multi.launch  multi_auv_planning.launch  multi_planning.launch  p_generation.launch  planning.launch  planning0.launch  planning1.launch  planning_namespace.launch  planning_ns.launch  problem_generation.launch  roadmap.launch  roadmap_and_allocation.launch  total_distance_sim_all.launch  tutorial.launch  tutorial2.launch  visualise.launch
src/demeter_planning/params/: get_data_allocation.yaml  origin.yaml  original_windfarm_coordinates.yaml  plan_wp.yaml  poi_connections.yaml  poi_coordinates.yaml  scaled_turbines_xy.yaml  scaled_visibility_G_only_with_turbines.pickle  scaled_visibility_G_with_contour_points.pickle  scaled_visibility_G_with_turbines.pickle  sim_stop_time.yaml  tides.yaml  turbine_inspected.yaml  turbines_coordinates.yaml  turbines_coordinates_6turbines.yaml  underwater_waypoints.yaml  vehicles_in_the_system.yaml  waypoints.yaml
src/demeter_planning/scripts/: action_interface.py  battery.py  battery_query.py  build_roadmaps.py  corners_xy.txt  create_problem_instance.py  demeter_gui.py  demeter_plan_exec.py  distance_tracker.py  exec_demeter.py  ga.py  ga_tests.py  ga_tests2.py  ga_tests3.py  ga_tests4.py  get_data_mission_exec.py  get_weather_stormglass.py  goal_allocation.py  goal_allocation_ga.py  goal_allocation_milp.py  goal_allocation_sa.py  gui.py  gui_subscriber.py  improve_allocation.py  init_populate_KB.py  initial_waypoint.py  interface.py  linear_prog_ga.py  mock_localization_error.py  monitor_sim_time.py  p_init.py  persistent.py  plan_publisher.py  populate_KB.py  problem_reduction_server_node.py  process_weather_stormglass.py  py_test.py  roadmap.py  rosplan_interface.py  tests.py  (+4 more)
src/demeter_planning/srv/: problem_reduction.srv
(+65 files in other folders)
