<?xml version="1.0"?>
<package format="2">
  <name>auv_control</name>
  <version>0.0.0</version>
  <description>The auv_control package</description>

  <maintainer email="eduard.codres@manchester.ac.uk">Eduard Codres</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
